# spatiotemporal-chaos-cca

./: LICENSE  README.md  analysis.py  cellular_automaton.py  experiments.ipynb  experiments.py  main.py  pyproject.toml  visualization.py
plots/: lyapunov_value.txt
