[project]
name = "isz-lab4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]

[tool.uv.workspace]
members = [
    "isz-lab4",
]
